--- a/assets/style.css
+++ b/assets/style.css
@@ -15,8 +15,8 @@ body{
     
 }
 header{
-    width:85rem;
-    height:41rem;
+    width:90rem;
+    height:40rem;
     background-image: url(RKP_1525.jpg );
     background-size:cover;
     justify-content: center;
@@ -36,11 +36,13 @@ header h1{
 header h2{
     color: aliceblue;
     text-align: left;
+    justify-content: center;
     font-style: inherit;
     font-family:'Times New Roman', Times, serif;
 }
 header h4{
     text-align: right;
+    justify-content: end;
 }
 
 nav ul {
@@ -80,8 +82,18 @@ section{
     cursor: pointer;
     font-size:large;
     font-weight: 400;
-    transform:scale(70px);
-    transition: background-color 0.5s ease;
+
+}
+form{
+    padding: 2em;
+    margin:0.5em auto;
+    margin-top: 0.5em auto;
+    background-color: beige;
+}
+
+.button{
+    color:#fff;
+    visibility: visible;
 }
 section h2{
     border-bottom: 2px solid #000000;
